k8s/apps/network/external-services/truenas/graphite-exporter.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphite-exporter
  namespace: truenas
  labels:
    app.kubernetes.io/name: graphite-exporter
    app.kubernetes.io/instance: truenas
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: graphite-exporter
      app.kubernetes.io/instance: truenas
  template:
    metadata:
      labels:
        app.kubernetes.io/name: graphite-exporter
        app.kubernetes.io/instance: truenas
    spec:
      containers:
        - image: prom/graphite-exporter:v0.13.1
          name: truenas-graphite-exporter
          args:
            - --graphite.mapping-config=/tmp/graphite-mapping.yaml
          resources:
            limits:
              cpu: 100m
              memory: 64Mi
            requests:
              cpu: 50m
              memory: 32Mi
          ports:
            - containerPort: 9109
              name: graphite-tcp
              protocol: TCP
            - containerPort: 9109
              name: graphite-udp
              protocol: UDP
            - containerPort: 9108
              name: prometheus
              protocol: TCP
          volumeMounts:
            - mountPath: /tmp
              name: config
      volumes:
        - name: config
          configMap:
            defaultMode: 420
            name: graphite-exporter
