k8s/apps/network/external-services/truenas/svc.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: truenas
  namespace: truenas
  annotations:
    traefik.ingress.kubernetes.io/service.serverstransport: truenas-truenas-ca@kubernetescrd
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  type: ExternalName
  externalName: ${NAS_URL}
  ports:
    - name: https
      port: 443
