k8s/apps/network/external-services/truenas/ingress.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truenas
  namespace: truenas
spec:
  ingressClassName: ingress-internal-traefik
  rules:
    - host: nas.emnt.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: truenas
                port:
                  number: 443
